--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@badrap/bar-of-progress": "^0.1.2",
+    "@heroicons/react": "^1.0.4",
+    "date-fns": "^2.25.0",
+    "geolib": "^3.3.3",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-date-range": "^1.4.0",
+    "react-dom": "^17.0.2",
+    "react-map-gl": "^6.1.17",
+    "tailwind-scrollbar-hide": "^1.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
